--- a/Hello/.cproject
+++ b/Hello/.cproject
@@ -43,6 +43,8 @@
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoFoundation"/>
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoXML"/>
 									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoJSON"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoSQL"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoSQLSQLite"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.link.option.paths.133374580" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" useByScannerDiscovery="false" valueType="libPaths">
 									<listOptionValue builtIn="false" value="/home/vhunter/Learning/C++/libraries/boost_1_67_0/lib"/>
