--- a/Hello/.cproject
+++ b/Hello/.cproject
@@ -28,6 +28,7 @@
 									<listOptionValue builtIn="false" value="/home/vhunter/Learning/C++/libraries/poco/include"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.dialect.std.740362587" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++11" valueType="enumerated"/>
+								<option id="gnu.cpp.compiler.option.pthread.804506147" name="Support for pthread (-pthread)" superClass="gnu.cpp.compiler.option.pthread" useByScannerDiscovery="false" value="true" valueType="boolean"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.1027762636" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.499027349" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug">
@@ -38,16 +39,20 @@
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.702012838" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.1281997449" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug">
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.link.option.libs.290714176" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" useByScannerDiscovery="false" valueType="libs">
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoUtil"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoNet"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoFoundation"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoXML"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoJSON"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoSQL"/>
-									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoSQLSQLite"/>
+									<listOptionValue builtIn="false" value="PocoUtil"/>
+									<listOptionValue builtIn="false" value="crypto"/>
+									<listOptionValue builtIn="false" value="ssl"/>
+									<listOptionValue builtIn="false" value="boost_system"/>
+									<listOptionValue builtIn="false" value="cpprest"/>
+									<listOptionValue builtIn="false" value="pthread"/>
+									<listOptionValue builtIn="false" value="PocoNet"/>
+									<listOptionValue builtIn="false" value="PocoFoundation"/>
+									<listOptionValue builtIn="false" value="PocoXML"/>
+									<listOptionValue builtIn="false" value="PocoJSON"/>
+									<listOptionValue builtIn="false" value="PocoSQL"/>
+									<listOptionValue builtIn="false" value="PocoSQLSQLite"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.link.option.paths.133374580" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" useByScannerDiscovery="false" valueType="libPaths">
-									<listOptionValue builtIn="false" value="/home/vhunter/Learning/C++/libraries/boost_1_67_0/lib"/>
 									<listOptionValue builtIn="false" value="/home/vhunter/Learning/C++/libraries/poco/lib"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1323100915" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
