--- a/Hello/.cproject
+++ b/Hello/.cproject
@@ -26,6 +26,7 @@
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.compiler.option.include.paths.1067871804" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
 									<listOptionValue builtIn="false" value="/home/vhunter/Learning/C++/tools/boost_1_67_0"/>
 									<listOptionValue builtIn="false" value="/home/vhunter/Learning/C++/libraries/pocopro/include"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Hello/include}&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.dialect.std.740362587" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++11" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.pthread.804506147" name="Support for pthread (-pthread)" superClass="gnu.cpp.compiler.option.pthread" useByScannerDiscovery="false" value="true" valueType="boolean"/>
@@ -49,11 +50,12 @@
 									<listOptionValue builtIn="false" value="PocoFoundation"/>
 									<listOptionValue builtIn="false" value="PocoXML"/>
 									<listOptionValue builtIn="false" value="PocoJSON"/>
-									<listOptionValue builtIn="false" value="PocoSQL"/>
-									<listOptionValue builtIn="false" value="PocoSQLSQLite"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoRemotingNG"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoRemotingNGTCP"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="PocoLicensing"/>
 								</option>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.cpp.link.option.paths.133374580" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" useByScannerDiscovery="false" valueType="libPaths">
-									<listOptionValue builtIn="false" value="/home/vhunter/Learning/C++/libraries/poco/lib"/>
+									<listOptionValue builtIn="false" value="/home/vhunter/Learning/C++/libraries/pocopro/lib"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1323100915" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
